<resources>
    <string name="app_name">Concetto\'23</string>

    <string name="menu_home">Home</string>
    <string name="menu_events">All Events</string>
    <string name="menu_club_events">Club Events</string>
    <string name="menu_department_events">Department Events</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_timeline">Timeline</string>
    <string name="menu_sponsors">Past Sponsors</string>
    <string name="menu_merchandise">Merchandise</string>
    <string name="menu_noticeboard">Notice Board</string>
    <string name="menu_mainsection">Main Section</string>
    <string name="menu_supportsection">Support Section</string>
    <string name="menu_rules">Rules</string>
    <string name="menu_contactus">Contact Us</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_coreTeam">Meet our Team</string>
    <string name="menu_qrscan">Scan QR</string>
    <string name="hackfest">Concetto\'23</string>s
    <string name="welcome">We are Back !</string>
    <string name="days">DAYS</string>
    <string name="hours">HOURS</string>
    <string name="minutes">MINUTES</string>
    <string name="seconds">SECONDS</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contactus">The Annual Techno-Management Fest of IIT(ISM) Dhanbad</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="bullet_list_html">
    <![CDATA[
    <ul>
        <li>XS*</li>
        <li>S*</li>
        <li>M*</li>
        <li>L*</li>
        <li>XL*</li>
        <li>2XL*</li>
        <li>3XL*</li>
    </ul>
    ]]>
  </string>
    <string-array name="date">
        <item>12th October, 2023</item>
        <item>13th October, 2023</item>
        <item>14th October, 2023</item>
        <item>15th October, 2023</item>
    </string-array>

    <string name="convener1Msg" >
        "Convener's Message \nAs quoted by Edward Teller,\"The science of today is the technology of tomorrow.\" Today\'s young minds are in eager search of a platform to showcase their talent, and CONCETTO provides such a platform for students. CONCETTO \'23: Cosmic Odyssey celebrates the incredible journey of innovation and exploration. This year, under the theme \"Cosmic Odyssey,\" the fest  pays homage to India's accomplishments in space exploration and offers a platform where brilliant young minds converge "with industries seeking fresh perspectives. This remarkable event acknowledges the dedicated team and sponsors whose invaluable efforts have made it possible. Together, participants embark on a collective quest to reach for the stars,exploring new horizons in technology and innovation."
    </string>

    <string name="convener2Msg">
        "With a sense of purpose, CONCETTO \'23 invites you to embark on a journey into the boundless mysteries of the universe. Navigating the cosmos under the theme \"Cosmic Odyssey,\" it pays tribute to India's remarkable achievements in space exploration. This fest is more than a showcase of talent, it's a bridge connecting industries with the next generation of innovators. The event is designed with a diverse range of technical and management events, providing a stage for emerging talent to shine. Our heartfelt thanks to the dedicated team, faculty, organizers, and sponsors who have made this remarkable event possible."
    </string>

    <string name="aboutus">
        "CONCETTO is the annual three-day Techno-Management Fest hosted by the esteemed Indian Institute of Technology (Indian School of Mines), Dhanbad every year. Merging technology and management, the fest is a beacon of innovation and budding talent. It has the largest participation in Eastern India, with a footfall of over 20,000. CONCETTO is more than an event. It's a platform where participants take on challenges to test their technical skills, expand their horizons with workshops by experts, and enjoy electrifying performances by renown stars as the sun sets."
        "This year, CONCETTO'23 - ORBITING INGENUITY is here with the theme \'Cosmic Odyssey\', which revolves around the Exploration and Colonization of Space. From 13th - 15th October 2023 the fest will mesmerize you with a plethora of technical and managerial events lined up. CONCETTO, a dream of engineering enthusiasts, empowers dreams to take flight. Certificates, goodies, and prizes worth lakhs await lucky participants. Step into the realm where technology and innovation entwine, where learning si festive, and each moment weaves cherished memories.
    </string>
</resources>