<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_home"
    android:id="@+id/nav_graph">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.iitism.concetto.ui.homefragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_sponsors"
            app:destination="@id/nav_sponsors" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.iitism.concetto.ui.profilefragment.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_timeline"
        android:name="com.iitism.concetto.ui.timelinefragment.TimelineFragment"
        android:label="@string/menu_timeline"
        tools:layout="@layout/fragment_timeline" />
    <fragment
        android:id="@+id/nav_sponsors"
        android:name="com.iitism.concetto.ui.sponsors.SponsorsFragment"
        android:label="@string/menu_sponsors"
        tools:layout="@layout/fragment_sponsors">
        <action
            android:id="@+id/action_nav_sponsors_to_nav_merchandise"
            app:destination="@id/nav_merchandise" />
    </fragment>

    <fragment
        android:id="@+id/nav_noticeboard"
        android:label="@string/menu_noticeboard"
        android:name="com.iitism.concetto.ui.noticeboardfragment.NoticeBoardFragment"
        tools:layout="@layout/fragment_notice_board"/>
    <fragment
        android:id="@+id/nav_coreTeam"
        android:label="@string/menu_coreTeam"
        android:name="com.iitism.concetto.ui.coreteam.CoreTeamFragment"
        tools:layout="@layout/fragment_core_team">
        <action
            android:id="@+id/action_nav_coreTeam_to_nav_clubEvents"
            app:destination="@id/nav_clubEvents" />
        <action
            android:id="@+id/action_nav_coreTeam_to_nav_departementEvents"
            app:destination="@id/nav_departementEvents" />
    </fragment>

    <fragment
        android:id="@+id/nav_aboutus"
        android:label="@string/menu_aboutus"
        android:name="com.iitism.concetto.ui.aboutUs.AboutUsFragment"
        tools:layout="@layout/fragment_about_us"/>

    <fragment
        android:id="@+id/nav_contactus"
        android:label="@string/menu_contactus"
        android:name="com.iitism.concetto.ui.contactus.ContactUsFragment"
        tools:layout="@layout/fragment_contact_us"/>
    <fragment
        android:id="@+id/nav_scanqr"
        android:label="@string/menu_qrscan"
        android:name="com.iitism.concetto.ui.scanqr.ScanQrFragment"
        tools:layout="@layout/fragment_scanqr"/>
    <fragment
        android:id="@+id/nav_merchandise"
        android:label="@string/menu_merchandise"
        android:name="com.iitism.concetto.ui.merchandisefragment.MerchandiseFragment"
        tools:layout="@layout/fragment_merchandise">
        <action
            android:id="@+id/action_nav_merchandise_to_nav_coreTeam"
            app:destination="@id/nav_coreTeam" />
    </fragment>
    <fragment
        android:id="@+id/nav_allEvents"
        android:label="@string/menu_events"
        android:name="com.iitism.concetto.ui.allevents.AllEventsFragment"
        tools:layout="@layout/fragment_all_events"/>

    <fragment
        android:id="@+id/nav_clubEvents"
        android:label="@string/menu_club_events"
        android:name="com.iitism.concetto.ui.clubevents.ClubEventsFragment"
        tools:layout="@layout/fragment_club_events">
        <action
            android:id="@+id/action_nav_clubEvents_to_nav_departementEvents"
            app:destination="@id/nav_departementEvents" />
    </fragment>
    <fragment
        android:id="@+id/nav_departementEvents"
        android:label="@string/menu_department_events"
        android:name="com.iitism.concetto.ui.departmentevents.DepartmentEventsFragment"
        tools:layout="@layout/fragment_department_events">
        <action
            android:id="@+id/action_nav_departementEvents_to_nav_allEvents"
            app:destination="@id/nav_allEvents" />
    </fragment>

<!--    <fragment-->
<!--        android:id="@id/nav_gatepass"-->
<!--        android:label="Gate Pass"-->
<!--        android:name="com.iitism.hackfestapp.ui.gatepass.GatePassFragment"-->
<!--        tools:layout="@layout/fragment_gate_pass"/>-->

<!--    <fragment-->
<!--        android:id="@id/nav_adminscanqr"-->
<!--        android:label="Admin Scan Qr"-->
<!--        android:name="com.iitism.hackfestapp.ui.adminscanqr.AdminScanQrFragment"-->
<!--        tools:layout="@layout/fragment_admin_scan_qr"/>-->



</navigation>