<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">
    <item
        android:title="@string/menu_mainsection">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/baseline_home_24"
                    android:title="@string/menu_home"
                    />


<!--                <item-->
<!--                    android:id="@+id/nav_profile"-->
<!--                    android:icon="@drawable/baseline_person_24"-->
<!--                    android:title="@string/menu_profile" />-->
<!--                <item-->
<!--                    android:id="@+id/nav_scanqr"-->
<!--                    android:icon="@drawable/baseline_qr_code_scanner_24"-->
<!--                    android:title="@string/menu_qrscan"/>-->
                <item
                    android:id="@+id/nav_merchandise"
                    android:icon="@drawable/ic_baseline_merchandise"
                    android:title="@string/menu_merchandise"/>
<!--                <item-->
<!--                    android:id="@+id/nav_gatepass"-->
<!--                    android:icon="@drawable/baseline_door_sliding_24"-->
<!--                    android:title="Gate Pass"/>-->
                <item
                    android:id="@+id/nav_timeline"
                    android:icon="@drawable/baseline_access_time_filled_24"
                    android:title="@string/menu_timeline" />
                <item
                    android:id="@+id/nav_sponsors"
                    android:icon="@drawable/baseline_view_list_24"
                    android:title="@string/menu_sponsors"/>


                <item
                    android:id="@+id/nav_noticeboard"
                    android:icon="@drawable/baseline_notifications_24"
                    android:title="@string/menu_noticeboard" />

<!--                <item-->
<!--                    android:id="@+id/nav_maps"-->
<!--                    android:icon="@drawable/ic_baseline_location_on_24"-->
<!--                    android:title="Maps" />-->

            </group>
        </menu>
    </item>

    <item android:title="Events">

        <menu >

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_allEvents"
                    android:icon="@drawable/baseline_emoji_events_24"
                    android:title="@string/menu_events"
                    />
                <item
                    android:id="@+id/nav_departementEvents"
                    android:icon="@drawable/baseline_emoji_events_24"
                    android:title="@string/menu_department_events"
                    />
                <item
                    android:id="@+id/nav_clubEvents"
                    android:icon="@drawable/baseline_emoji_events_24"
                    android:title="@string/menu_club_events"
                    />
                <item
                    android:id="@+id/nav_workshop"
                    android:icon="@drawable/baseline_emoji_events_24"
                    android:title="Workshops"
                    />



            </group>

        </menu>

    </item>

<!--    <item android:title="Admin" >-->

<!--        <menu>-->

<!--            <item-->
<!--                android:id="@+id/nav_add_notice"-->
<!--                android:icon="@drawable/baseline_send_24"-->
<!--                android:title="Add Notice" />-->
<!--        </menu>-->
<!--    </item>-->

    <item
        android:title="@string/menu_supportsection"
        >
        <menu>
            <group android:checkableBehavior="single">
<!--                <item-->
<!--                    android:id = "@+id/nav_aboutus"-->
<!--                    android:icon="@drawable/baseline_description_24"-->
<!--                    android:title="@string/menu_aboutus" />-->

                <item
                android:id = "@+id/nav_coreTeam"
                android:icon="@drawable/baseline_description_24"
                android:title="@string/menu_coreTeam" />

                <item
                    android:id="@+id/nav_contactus"
                    android:icon="@drawable/baseline_call_24"
                    android:title="@string/menu_contactus"/>

            </group>
        </menu>
    </item>

</menu>