<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="80dp"
    tools:context=".ui.newaboutus.BlankFragment">

<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/event_card_border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/white"
            android:text="ABOUT US"
            android:gravity="center"
            android:textSize="28sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/aboutus"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="18sp"
            android:fontFamily="@font/genos_light"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="-50dp"
        android:layout_gravity="center"
        app:cardCornerRadius="75dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:background="@drawable/event_card_border"
            android:elevation="5dp"
            android:src="@drawable/prof1"/>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="55dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/event_card_border"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="Prof.Vasanta Govind Kumar Villuri"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Convener's Message : "
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center"
            android:fontFamily="@font/inter_bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/genos_light"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/convener1Msg"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="-50dp"
        android:layout_gravity="center"
        app:cardCornerRadius="75dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:background="@drawable/event_card_border"
            android:elevation="5dp"
            android:src="@drawable/prof2"/>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/event_card_border"
        android:paddingTop="55dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Prof.Saurabh Srivastva"
            android:fontFamily="@font/inter_bold"
            android:textSize="22sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Co Convener's Message : "
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center"
            android:fontFamily="@font/inter_bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/genos_light"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/convener2Msg"
            />

    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>